--- a/index.html
+++ b/index.html
@@ -296,7 +296,12 @@ License: https://freebootstrap.net/license
               <div class="col-md-4 mb-4 mb-md-0" data-aos="fade-up" data-aos-delay="300">
                 <div class="p-5 rounded-4 price-table h-100">
                   <h3>Personal</h3>
-                  <p>Choose a plan that fits your personal financial needs and start managing your finances more effectively.</p>
+                  <ul class="list-unstyled d-flex flex-column gap-3">
+                        <li class="d-flex gap-2 align-items-start mb-0"><span class="icon rounded-circle position-relative mt-1"><i class="bi bi-check"></i></span><span>Personalized financial insights and reports</span></li>
+                        <li class="d-flex gap-2 align-items-start mb-0"><span class="icon rounded-circle position-relative mt-1"><i class="bi bi-check"></i></span><span>Priority customer support</span></li>
+                        <li class="d-flex gap-2 align-items-start mb-0"><span class="icon rounded-circle position-relative mt-1"><i class="bi bi-check"></i></span><span>Access to exclusive investment opportunities</span></li>
+                        <li class="d-flex gap-2 align-items-start mb-0"><span class="icon rounded-circle position-relative mt-1"><i class="bi bi-check"></i></span><span>AI-driven financial recommendations</span></li>
+                      </ul>
                   <div class="price mb-4"><strong>$7</strong><span>/ month</span></div>
                   <div><a class="btn" href="#">Get Started</a></div>
                 </div>
