--- a/index.html
+++ b/index.html
@@ -310,19 +310,21 @@ License: https://freebootstrap.net/license
                 <div class="p-5 rounded-4 price-table popular h-100">
                   <div class="row">
                     <div class="col-md-6">
-                      <h3 class="mb-3">Business</h3>
-                      <p>Optimize your business financial operations with our tailored business plans.</p>
-                      <div class="price mb-4"><strong class="me-1">$29</strong><span>/ month</span></div>
-                      <div><a class="btn btn-white hover-outline" href="#">Get Started</a></div>
-                    </div>
-                    <div class="col-md-6 pricing-features">
-                      <h4 class="text-uppercase fw-bold mb-3">Features</h4>
-                      <ul class="list-unstyled d-flex flex-column gap-3">
+                     <h3>Personal</h3>
+                  <ul class="list-unstyled d-flex flex-column gap-3">
                         <li class="d-flex gap-2 align-items-start mb-0"><span class="icon rounded-circle position-relative mt-1"><i class="bi bi-check"></i></span><span>Personalized financial insights and reports</span></li>
                         <li class="d-flex gap-2 align-items-start mb-0"><span class="icon rounded-circle position-relative mt-1"><i class="bi bi-check"></i></span><span>Priority customer support</span></li>
                         <li class="d-flex gap-2 align-items-start mb-0"><span class="icon rounded-circle position-relative mt-1"><i class="bi bi-check"></i></span><span>Access to exclusive investment opportunities</span></li>
                         <li class="d-flex gap-2 align-items-start mb-0"><span class="icon rounded-circle position-relative mt-1"><i class="bi bi-check"></i></span><span>AI-driven financial recommendations</span></li>
                       </ul>
+                  <div class="price mb-4"><strong>$7</strong><span>/ month</span></div>
+                  <div><a class="btn" href="#">Get Started</a></div>
+                </div>
+              </div>
+              <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
+                <div class="p-5 rounded-4 price-table popular h-100">
+                  <div class="row">
+                    <div class="col-md-6">
                     </div>
                   </div>
                 </div>
